--- a/Benedicta-master/index.html
+++ b/Benedicta-master/index.html
@@ -7,12 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Benedicta</title>
 
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Amatic SC' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link href="css/style.css" rel="stylesheet">
 
 </head>
@@ -128,6 +130,7 @@
     </section>
     <!-- SEC1 ENDS -->
 
+    <!-- MENU UPDATE SECTION STARTS -->
     <section id="MenuUpdate">
         <div class="container">
             <div class="row">
@@ -141,6 +144,9 @@
             </div>
         </div>
     </section>
+    <!-- MENU UPDATE SECTION ENDS -->
+
+    <!-- MENU SECTION STARTS -->
     <section id="menu">
         <div class="container">
             <div class="row">
@@ -152,7 +158,7 @@
                         <div class="contentDiv">
                             <h5 class="menu_item_title" style="color:#ffffff;">Sausage Cassoulet<i class="line"
                                     style="border-color:#ffffff;"></i></h5>
-                                    <h3 style="color:white">-----------------------</h3>
+                            <h3 style="color:white">-----------------------</h3>
                             <p class="menu_item_ingredients" style="color:rgba(255,255,255,0.9);">Mushroom, Veggie,
                                 White Sources, Fish, Carrot</p><span class="menu_item_price" style="color:#ef343a;">$
                                 36</span>
@@ -167,7 +173,7 @@
                         <div class="contentDiv">
                             <h5 class="menu_item_title" style="color:#ffffff;">Sausage Cassoulet<i class="line"
                                     style="border-color:#ffffff;"></i></h5>
-                                    <h3 style="color:white">-----------------------</h3>
+                            <h3 style="color:white">-----------------------</h3>
                             <p class="menu_item_ingredients" style="color:rgba(255,255,255,0.9);">Mushroom, Veggie,
                                 White Sources, Fish, Carrot</p><span class="menu_item_price" style="color:#ef343a;">$
                                 36</span>
@@ -182,7 +188,7 @@
                         <div class="contentDiv">
                             <h5 class="menu_item_title" style="color:#ffffff;">Sausage Cassoulet<i class="line"
                                     style="border-color:#ffffff;"></i></h5>
-                                    <h3 style="color:white">-----------------------</h3>
+                            <h3 style="color:white">-----------------------</h3>
                             <p class="menu_item_ingredients" style="color:rgba(255,255,255,0.9);">Mushroom, Veggie,
                                 White Sources, Fish, Carrot</p><span class="menu_item_price" style="color:#ef343a;">$
                                 36</span>
@@ -198,7 +204,7 @@
                         <div class="contentDiv">
                             <h5 class="menu_item_title" style="color:#ffffff;">Sausage Cassoulet<i class="line"
                                     style="border-color:#ffffff;"></i></h5>
-                                    <h3 style="color:white">-----------------------</h3>
+                            <h3 style="color:white">-----------------------</h3>
                             <p class="menu_item_ingredients" style="color:rgba(255,255,255,0.9);">Mushroom, Veggie,
                                 White Sources, Fish, Carrot</p><span class="menu_item_price" style="color:#ef343a;">$
                                 36</span>
@@ -214,7 +220,7 @@
                         <div class="contentDiv">
                             <h5 class="menu_item_title" style="color:#ffffff;">Sausage Cassoulet<i class="line"
                                     style="border-color:#ffffff;"></i></h5>
-                                    <h3 style="color:white">-----------------------</h3>
+                            <h3 style="color:white">-----------------------</h3>
                             <p class="menu_item_ingredients" style="color:rgba(255,255,255,0.9);">Mushroom, Veggie,
                                 White Sources, Fish, Carrot</p><span class="menu_item_price" style="color:#ef343a;">$
                                 36</span>
@@ -230,7 +236,7 @@
                         <div class="contentDiv">
                             <h5 class="menu_item_title" style="color:#ffffff;">Sausage Cassoulet<i class="line"
                                     style="border-color:#ffffff;"></i></h5>
-                                    <h3 style="color:white">-----------------------</h3>
+                            <h3 style="color:white">-----------------------</h3>
                             <p class="menu_item_ingredients" style="color:rgba(255,255,255,0.9);">Mushroom, Veggie,
                                 White Sources, Fish, Carrot</p><span class="menu_item_price" style="color:#ef343a;">$
                                 36</span>
@@ -246,9 +252,145 @@
             </div>
         </div>
     </section>
+    <!-- MENU SECTION ENDS -->
+
+    <!-- RESERVE SECTION STARTS -->
+    <section id="Reserve">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h4 class="phone">PHONE: +1 235 654 54 99</h4>
+                            <h1>Reserve a Table</h1>
+                            <hr class="ReserveHr">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <img src="img/icons8-rice-bowl-100.png">
+                            <h4>Amazing Dishes</h4>
+                            <p>Lorem ipsum dosectetur adipisicing elit sed do orem ipsum dolor</p>
+                        </div>
+
+
+                        <div class="col-lg-6">
+                            <img src="img/icons8-sofa-100 (1).png">
+                            <h4>Stylish Interior</h4>
+                            <p>Lorem ipsum dosectetur adipisicing elit sed do orem ipsum dolor</p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-lg-6">
+                    <div class="reserveForm">
+                        <form>
+                            <div class="form-row">
+                                <div class="form-group col-md-4">
+                                    <label for="inputEmail4">Name*</label>
+                                    <input type="Name" class="form-control" id="inputEmail4">
+                                </div>
+                                <div class="form-group col-md-4">
+                                    <label for="inputPassword4">Email*</label>
+                                    <input type="text" class="form-control" id="inputPassword4">
+                                </div>
+                                <div class="form-group col-md-4">
+                                    <label for="inputPassword4">Phone*</label>
+                                    <input type="text" class="form-control" id="inputPassword4">
+                                </div>
+                                <div class="form-group col-md-4">
+                                    <label for="inputAddress">Date*</label>
+                                    <input type="date" class="form-control" id="inputAddress">
+                                </div>
+                                <div class="form-group col-md-4">
+                                    <label for="inputState">Time*</label>
+                                    <select id="inputState" class="form-control">
+                                        <option selected>Choose...</option>
+                                        <option>...</option>
+                                    </select>
+                                </div>
+                                <div class="form-group col-md-4">
+                                    <label for="inputAddress">Seats*</label>
+                                    <input type="number" min="1" class="form-control" id="inputAddress">
+                                </div>
+                                <div class="form-group col-md-12">
+                                    <label for="exampleFormControlTextarea2">Special Requests</label>
+                                    <textarea class="form-control rounded-0" id="exampleFormControlTextarea2"
+                                        rows="5"></textarea>
+                                </div>
+                            </div>
 
 
 
+                            <button type="submit" style="margin: 0 auto;display:block" class="showAllMenu">Sign
+                                in</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- RESERVE SECTION ENDS -->
+
+    <!-- ABOUT SECTION STARTS -->
+    <section id="About">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h2>About Our</h2>
+                            <h1>Restaurant</h1>
+                            <hr class="AboutHr">
+                            <p>Cum sociis natoque penatibus et magnis dis parturient montes. Vestibulum id ligula porta
+                                felis euismod semper. Vestibulum id ligula porta felis euismod semper. Aliquam et elit
+                                eu nunc rhoncus viverra quis at felis et netus et malesuada fames ac turpis egestas</p>
+
+                            <div class="col-lg-12 itemBtn">
+                                <button class="readMore">READ MORE</button>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-lg-6">
+                    <div class="imgDivs">
+
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="imgDivLeft">
+                                    <img src="img/home-about1.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="imgDivRight">
+                                    <img src="img/home-about2.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- ABOUT SECTION ENDS -->
+    <!-- Tea SECTION START -->
+
+    <section id="tea">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- TEA SECTION END  -->
     <!-- FOOTER STARTS -->
     <!-- <footer class="d-flex align-item col-lg-4s-center">
         <div class="container-fluid" style="padding:0px 35px;">
