--- a/Benedicta/Menu.html
+++ b/Benedicta/Menu.html
@@ -20,8 +20,10 @@
 </head>
 
 <body>
+
+
     <!-- /* HEADER starts */ -->
-    <header>
+    <header id="AboutHeader">
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background:transparent !important;">
                 <a class="navbar-brand" href="index.html"><img
@@ -54,9 +56,6 @@
                             <a class="nav-link" href="Contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Buy.html">Buy</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href=""><i class="fab fa-facebook-f"></i></a>
                         </li>
                         <li class="nav-item">
@@ -73,78 +72,40 @@
             </nav>
 
             <div class="row text-center" style="margin-top:200px;">
-                <div class="col-12 mb-5">
-                    <h4>Welcome</h4>
-                    <hr class="divider divider-lg bg-mantis align-items-center">
-                </div>
                 <div class="col-12 mb-3">
-                    <h1>Benedicta Asian <br> Restaurant</h1>
-                </div>
-                <div class="col-12">
-                    <p>Restaurant serving delicious asian cuisine <br> from around the world</p>
+                    <h1>Menu</h1>
                 </div>
             </div>
         </div>
 
     </header>
     <!-- /* HEADER ENDS */ -->
-    <!-- SEC1 STARTS -->
-    <section id="SecOne">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4   text-center">
-                    <div class="row">
-                        <div class="col-12"><img src="img/menu-icon1.png"></div>
-                        <div class="col-12 mt-4">
-                            <h4>Nemas</h4>
-                        </div>
-                        <div class="col-12 mt-4">
-                            <p>Luctus nec ullamcorper mattis, pulvinar dapibus leo</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4  text-center">
-                    <div class="row">
-                        <div class="col-12"><img src="img/menu-icon2.png"></div>
-                        <div class="col-12 mt-4">
-                            <h4>Sushi</h4>
-                        </div>
-                        <div class="col-12 mt-4">
-                            <p>Luctus nec ullamcorper mattis, pulvinar dapibus leo</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4  text-center">
-                    <div class="row">
-                        <div class="col-12"><img src="img/menu-icon4.png"></div>
-                        <div class="col-12 mt-4">
-                            <h4>Rolls</h4>
-                        </div>
-                        <div class="col-12 mt-4">
-                            <p>Luctus nec ullamcorper mattis, pulvinar dapibus leo</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- SEC1 ENDS -->
 
-    <!-- MENU UPDATE SECTION STARTS -->
-    <section id="MenuUpdate">
+    <!-- LOOK AT SECTION STARTS -->
+    <section id="LookAt">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <div class="item">
-                        <h2>MENU UPDATE</h2>
-                        <span>Try New Menu</span>
-                        <hr>
-                    </div>
+                <div class="col-lg-12 text-center">
+                    <h3>Look at our full menu in it there will definitely find something tasty for you.</h3>
                 </div>
             </div>
         </div>
     </section>
-    <!-- MENU UPDATE SECTION ENDS -->
+    <!-- LOOK AT SECTION ENDS -->
+
+    <!-- NEMAS SECTION STARTS -->
+    <section id="Nemas">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h5>Nemas</h5>
+                    <p>Luctus nec ullamcorper mattis, pulvinar dapibus leo</p>
+                    <hr>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- NEMAS SECTION ENDS -->
 
     <!-- MENU SECTION STARTS -->
     <section id="menu">
@@ -245,177 +206,150 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+    <!-- MENU SECTION ENDS -->
+
+    <!-- ROLLS SECTION STARTS -->
+    <section id="Rolls">
+        <div class="container">
             <div class="row">
-                <div class="col-lg-12 itemBtn">
-                    <button class=" showAllMenu">SHOW FULL MENU</button>
+                <div class="col-lg-12 text-center">
+                    <h5>Rolls</h5>
+                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem</p>
+                    <hr>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ROLLS SECTION ENDS -->
+
+    <!-- MENU SECTION STARTS -->
+    <section id="menu">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="item">
+                        <div class="imgDiv">
+                            <img src="img/menu-img7.jpg" alt="">
+                        </div>
+                        <div class="contentDiv">
+                            <h5 class="menu_item_title" style="color:#ffffff;">Sausage Cassoulet<i class="line"
+                                    style="border-color:#ffffff;"></i></h5>
+                            <h3 style="color:white">-----------------------</h3>
+                            <p class="menu_item_ingredients" style="color:rgba(255,255,255,0.9);">Mushroom, Veggie,
+                                White Sources, Fish, Carrot</p><span class="menu_item_price" style="color:#ef343a;">$
+                                36</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="item">
+                        <div class="imgDiv">
+                            <img src="img/menu-img8.jpg" alt="">
+                        </div>
+                        <div class="contentDiv">
+                            <h5 class="menu_item_title" style="color:#ffffff;">Sausage Cassoulet<i class="line"
+                                    style="border-color:#ffffff;"></i></h5>
+                            <h3 style="color:white">-----------------------</h3>
+                            <p class="menu_item_ingredients" style="color:rgba(255,255,255,0.9);">Mushroom, Veggie,
+                                White Sources, Fish, Carrot</p><span class="menu_item_price" style="color:#ef343a;">$
+                                36</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="item">
+                        <div class="imgDiv">
+                            <img src="img/menu-img9.jpg" alt="">
+                        </div>
+                        <div class="contentDiv">
+                            <h5 class="menu_item_title" style="color:#ffffff;">Sausage Cassoulet<i class="line"
+                                    style="border-color:#ffffff;"></i></h5>
+                            <h3 style="color:white">-----------------------</h3>
+                            <p class="menu_item_ingredients" style="color:rgba(255,255,255,0.9);">Mushroom, Veggie,
+                                White Sources, Fish, Carrot</p><span class="menu_item_price" style="color:#ef343a;">$
+                                36</span>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="item">
+                        <div class="imgDiv">
+                            <img src="img/menu-img10.jpg" alt="">
+                        </div>
+                        <div class="contentDiv">
+                            <h5 class="menu_item_title" style="color:#ffffff;">Sausage Cassoulet<i class="line"
+                                    style="border-color:#ffffff;"></i></h5>
+                            <h3 style="color:white">-----------------------</h3>
+                            <p class="menu_item_ingredients" style="color:rgba(255,255,255,0.9);">Mushroom, Veggie,
+                                White Sources, Fish, Carrot</p><span class="menu_item_price" style="color:#ef343a;">$
+                                36</span>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="item">
+                        <div class="imgDiv">
+                            <img src="img/menu-img11.jpg" alt="">
+                        </div>
+                        <div class="contentDiv">
+                            <h5 class="menu_item_title" style="color:#ffffff;">Sausage Cassoulet<i class="line"
+                                    style="border-color:#ffffff;"></i></h5>
+                            <h3 style="color:white">-----------------------</h3>
+                            <p class="menu_item_ingredients" style="color:rgba(255,255,255,0.9);">Mushroom, Veggie,
+                                White Sources, Fish, Carrot</p><span class="menu_item_price" style="color:#ef343a;">$
+                                36</span>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="item">
+                        <div class="imgDiv">
+                            <img src="img/menu-img12.jpg" alt="">
+                        </div>
+                        <div class="contentDiv">
+                            <h5 class="menu_item_title" style="color:#ffffff;">Sausage Cassoulet<i class="line"
+                                    style="border-color:#ffffff;"></i></h5>
+                            <h3 style="color:white">-----------------------</h3>
+                            <p class="menu_item_ingredients" style="color:rgba(255,255,255,0.9);">Mushroom, Veggie,
+                                White Sources, Fish, Carrot</p><span class="menu_item_price" style="color:#ef343a;">$
+                                36</span>
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- MENU SECTION ENDS -->
 
-    <!-- RESERVE SECTION STARTS -->
-    <section id="Reserve">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <h4 class="phone">PHONE: +1 235 654 54 99</h4>
-                            <h1>Reserve a Table</h1>
-                            <hr class="ReserveHr">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <img src="img/icons8-rice-bowl-100.png">
-                            <h4>Amazing Dishes</h4>
-                            <p>Lorem ipsum dosectetur adipisicing elit sed do orem ipsum dolor</p>
-                        </div>
-
-
-                        <div class="col-lg-6">
-                            <img src="img/icons8-sofa-100 (1).png">
-                            <h4>Stylish Interior</h4>
-                            <p>Lorem ipsum dosectetur adipisicing elit sed do orem ipsum dolor</p>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-lg-6">
-                    <div class="reserveForm">
-                        <form>
-                            <div class="form-row">
-                                <div class="form-group col-md-4">
-                                    <label for="inputEmail4">Name*</label>
-                                    <input type="Name" class="form-control" id="inputEmail4">
-                                </div>
-                                <div class="form-group col-md-4">
-                                    <label for="inputPassword4">Email*</label>
-                                    <input type="text" class="form-control" id="inputPassword4">
-                                </div>
-                                <div class="form-group col-md-4">
-                                    <label for="inputPassword4">Phone*</label>
-                                    <input type="text" class="form-control" id="inputPassword4">
-                                </div>
-                                <div class="form-group col-md-4">
-                                    <label for="inputAddress">Date*</label>
-                                    <input type="date" class="form-control" id="inputAddress">
-                                </div>
-                                <div class="form-group col-md-4">
-                                    <label for="inputState">Time*</label>
-                                    <select id="inputState" class="form-control">
-                                        <option selected>Choose...</option>
-                                        <option>...</option>
-                                    </select>
-                                </div>
-                                <div class="form-group col-md-4">
-                                    <label for="inputAddress">Seats*</label>
-                                    <input type="number" min="1" class="form-control" id="inputAddress">
-                                </div>
-                                <div class="form-group col-md-12">
-                                    <label for="exampleFormControlTextarea2">Special Requests</label>
-                                    <textarea class="form-control rounded-0" id="exampleFormControlTextarea2"
-                                        rows="5"></textarea>
-                                </div>
-                            </div>
-
-
-
-                            <button type="submit" style="margin: 0 auto;display:block" class="showAllMenu">Sign
-                                in</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- RESERVE SECTION ENDS -->
-
-    <!-- ABOUT SECTION STARTS -->
-    <section id="About">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <h2>About Our</h2>
-                            <h1>Restaurant</h1>
-                            <hr class="AboutHr">
-                            <p>Cum sociis natoque penatibus et magnis dis parturient montes. Vestibulum id ligula porta
-                                felis euismod semper. Vestibulum id ligula porta felis euismod semper. Aliquam et elit
-                                eu nunc rhoncus viverra quis at felis et netus et malesuada fames ac turpis egestas</p>
-
-                            <div class="col-lg-12 itemBtn">
-                                <button class="readMore">READ MORE</button>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-lg-6">
-                    <div class="imgDivs">
-
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="imgDivLeft">
-                                    <img src="img/home-about1.jpg" alt="">
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="imgDivRight">
-                                    <img src="img/home-about2.jpg" alt="">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section>
-    <!-- ABOUT SECTION ENDS -->
-    <!-- Tea SECTION START -->
-
-    <section id="tea">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- TEA SECTION END  -->
     <!-- FOOTER STARTS -->
-    <!-- <footer class="d-flex align-item col-lg-4s-center">
+    <footer class="d-flex align-item col-lg-4s-center">
         <div class="container-fluid" style="padding:0px 35px;">
-            <div class="row">
-                <div class="col-12 ">
-                    <div class="row ">
-                        <div class="col-6 ">
-                            <h5 style="line-height: 30px;font-size: 12px;  color:white;">Copyright © 2018 Evatheme. All
-                                Rights
-                                Reserved.
-                            </h5>
-                        </div>
-                        <div class="col-6 text-right">
-                            <a href=""><i class="fab fa-facebook-f"></i></a>
-                            <a href=""><i class="fab fa-instagram"></i></a>
-                            <img src="http://mail.danransom.com/images/back-to-top.png" alt="">
-                        </div>
+            <div class="row" style="margin-top:40px">
 
+                    <div class="col-lg-6 ">
+                        <h5 style="line-height: 30px;font-size: 12px;  color:white;">Copyright © 2018 Evatheme. All
+                            Rights
+                            Reserved.
+                        </h5>
+                    </div>
+                    <div class="col-lg-6 text-right">
+                        <a href=""><i class="fab fa-facebook-f"></i></a>
+                        <a href=""><i class="fab fa-instagram"></i></a>
+                        <img src="img/v-07-512.png" alt="" style="background-color:white">
                     </div>
 
-                </div>
+
             </div>
         </div>
-    </footer> -->
+    </footer>
     <!-- FOOTER ENDS -->
+
     <script src="https://code.jquery.com/jquery-3.4.0.min.js"
         integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
