--- a/Benedicta/Reservation.html
+++ b/Benedicta/Reservation.html
@@ -186,7 +186,8 @@
 
             </div>
         </div>
-    </footer>S -->
+    </footer>
+    <!-- FOOTER ENDS -->
 
 
     <script src="https://code.jquery.com/jquery-3.4.0.min.js"
