--- a/Benedicta/About.html
+++ b/Benedicta/About.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Benedicta</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <style>
+        .mySlides {
+            display: none;
+        }
+    </style>
 
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -19,6 +26,8 @@
     <link href="css/style.css" rel="stylesheet">
 
 </head>
+
+
 
 <body>
 
@@ -132,28 +141,21 @@
     <!-- CUSTOM SECTION ENDS -->
 
     <!-- GALLERY SECTION STARTS -->
-    <section id="Gallery">
+    <section id="Gallery" style="padding-bottom:70px;">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="row">
-                        <div class="col-lg-4">
-                            <img src="img/gallery1.jpg">
-                        </div>
-                        <div class="col-lg-4">
-                            <img src="img/gallery2.jpg">
-                        </div>
-                        <div class="col-lg-4">
-                            <img src="img/gallery3.jpg">
-                        </div>
-                        <div class="col-lg-4">
-                            <img src="img/gallery4.jpg">
-                        </div>
-                        <div class="col-lg-4">
-                            <img src="img/gallery5.jpg">
-                        </div>
-                        <div class="col-lg-4">
-                            <img src="img/gallery6.jpg">
+                        <div class="w3-content w3-display-container">
+                            <img class="mySlides" src="img/gallery1.jpg" style="width:100%">
+                            <img class="mySlides" src="img/gallery2.jpg" style="width:100%">
+                            <img class="mySlides" src="img/gallery3.jpg" style="width:100%">
+                            <img class="mySlides" src="img/gallery4.jpg" style="width:100%">
+                            <img class="mySlides" src="img/gallery5.jpg" style="width:100%">
+                            <img class="mySlides" src="img/gallery6.jpg" style="width:100%">
+
+                            <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+                            <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
                         </div>
                     </div>
                 </div>
